samples/_failures_safe/1761409625_96795d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f02265d.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_2f02265d.c:136:22: error: expected ‘;’ at end of input
  136 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_2f02265d.c:136:5: error: expected declaration or statement at end of input
  136 |     for (int i = 0; i
      |     ^~~
